# cookiecutter-pypackage

./: .gitignore  Makefile  README.rst  TODO.txt  cookiecutter.json  project_survey.md
docs/: prompts.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .vimrc  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
